[gd_scene load_steps=3 format=3 uid="uid://b7mfbhjbnelg1"]

[ext_resource type="Script" uid="uid://ctx1sho6q6vom" path="res://Utilities/pause_menu/video_menu/video_settings.gd" id="1_gs30i"]
[ext_resource type="Theme" uid="uid://dr1yk2pxxkcq3" path="res://Assets/themes/theme.tres" id="2_e2l73"]

[node name="GraphicsSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gs30i")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = -247.0
offset_right = 441.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer" groups=["buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
current_tab = 0

[node name="Display" type="ScrollContainer" parent="PanelContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Display"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")

[node name="DisplayGridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Display/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 25
columns = 2

[node name="FullscreenLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Window Mode "

[node name="FullscreenOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../..")
focus_neighbor_bottom = NodePath("../MonitorOptionButton")
theme = ExtResource("2_e2l73")
alignment = 1
expand_icon = true
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="MonitorLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Monitor"

[node name="MonitorOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenOptionButton")
focus_neighbor_bottom = NodePath("../VSyncOptionButton")

[node name="VSyncLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
tooltip_text = "Vertical Sync
Locks the game's frame rate to your monitor's refresh rate to prevent jitter and screen tearing

Adaptive: locks the frame rate when it goes higher than the refresh rate
Enabled: always locks the frame rate (may cause stutters if performance drops)"
mouse_filter = 1
theme = ExtResource("2_e2l73")
text = "Vertical Sync"

[node name="VSyncOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MonitorOptionButton")
focus_neighbor_bottom = NodePath("../ScaleContainer/ScaleSlider")
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2

[node name="ScaleLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Render Scale"

[node name="ScaleContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")

[node name="ScaleSlider" type="HSlider" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/ScaleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../VSyncOptionButton")
focus_neighbor_bottom = NodePath("../../UpscaleOptionButton")
theme = ExtResource("2_e2l73")
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0
scrollable = false
tick_count = 8
ticks_on_borders = true

[node name="ScaleLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/ScaleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="UpscaleLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Upscaling"

[node name="UpscaleOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ScaleContainer/ScaleSlider")
focus_neighbor_bottom = NodePath("../FPSContainer/FPSSlider")
item_count = 3
popup/item_0/text = "Bilinear"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.2"
popup/item_2/id = 2

[node name="SharpnessLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "FSR Sharpness"

[node name="SharpnessContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")

[node name="SharpnessSlider" type="HSlider" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/SharpnessContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../UpscaleOptionButton")
focus_neighbor_bottom = NodePath("../../FPSContainer/FPSSlider")
theme = ExtResource("2_e2l73")
max_value = 2.0
step = 0.1
scrollable = false
tick_count = 11

[node name="SharpnessSpinBox" type="SpinBox" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/SharpnessContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_e2l73")
max_value = 2.0
step = 0.01
alignment = 1
custom_arrow_step = 0.1

[node name="FPSLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
tooltip_text = "FPS Limit
Limits the game's frame rate to the specified number (set to 0 to disable)

NOTE: enabling Vertical Sync will override this limit if your monitor's refresh rate is lower than the limit you set here"
mouse_filter = 1
theme = ExtResource("2_e2l73")
text = "FPS Limit"

[node name="FPSContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")

[node name="FPSSlider" type="HSlider" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../UpscaleOptionButton")
theme = ExtResource("2_e2l73")
max_value = 240.0
step = 2.0
rounded = true
scrollable = false
tick_count = 9

[node name="FPSSpinBox" type="SpinBox" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_e2l73")
max_value = 999.0
rounded = true
alignment = 1

[node name="FPSLimitOffLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "OFF"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Stats Display"

[node name="StatsOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ScaleContainer/ScaleSlider")
focus_neighbor_bottom = NodePath("../FPSContainer/FPSSlider")
item_count = 2
popup/item_0/text = "Hidden"
popup/item_0/id = 0
popup/item_1/text = "Display FPS"
popup/item_1/id = 1

[node name="Quality" type="ScrollContainer" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Quality"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/Quality/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")

[node name="PresetLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Apply Preset"
horizontal_alignment = 1

[node name="PresetsContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")

[node name="Preset1" type="Button" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
text = "Very Low"

[node name="Preset2" type="Button" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
text = "Low"

[node name="Preset3" type="Button" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
text = "Medium"

[node name="Preset4" type="Button" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
text = "High"

[node name="Preset5" type="Button" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_e2l73")
text = "Ultra"

[node name="CustomLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Custom Settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 25
columns = 2

[node name="FilteringLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "TODO Filtering"

[node name="FilteringOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../..")
theme = ExtResource("2_e2l73")
disabled = true
alignment = 1
expand_icon = true
item_count = 5
popup/item_0/text = "Trilinear"
popup/item_0/id = 0
popup/item_1/text = "Anisotropic 2x"
popup/item_1/id = 1
popup/item_2/text = "Anisotropic 4x"
popup/item_2/id = 2
popup/item_3/text = "Anisotropic 8x"
popup/item_3/id = 3
popup/item_4/text = "Anisotropic 16x"
popup/item_4/id = 4

[node name="AALabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Anti-Aliasing"

[node name="AAOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../FilteringOptionButton")
theme = ExtResource("2_e2l73")
alignment = 1
expand_icon = true
item_count = 6
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "TAA"
popup/item_2/id = 2
popup/item_3/text = "MSAA 2x"
popup/item_3/id = 3
popup/item_4/text = "MSAA 4x"
popup/item_4/id = 4
popup/item_5/text = "MSAA 8x"
popup/item_5/id = 5

[node name="LODLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Model Detail"

[node name="LODOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../FilteringOptionButton")
theme = ExtResource("2_e2l73")
alignment = 1
expand_icon = true
item_count = 5
popup/item_0/text = "Very Low"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Ultra"
popup/item_4/id = 4

[node name="ShadowSizeLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Shadow Quality"

[node name="ShadowSizeOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../FilteringOptionButton")
theme = ExtResource("2_e2l73")
alignment = 1
expand_icon = true
item_count = 5
popup/item_0/text = "Very Low"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Ultra"
popup/item_4/id = 4

[node name="SSAOLabel" type="Label" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_e2l73")
text = "Ambient Occlusion"

[node name="SSAOOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../FilteringOptionButton")
theme = ExtResource("2_e2l73")
alignment = 1
expand_icon = true
item_count = 6
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Very Low"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2
popup/item_3/text = "Medium"
popup/item_3/id = 3
popup/item_4/text = "High"
popup/item_4/id = 4
popup/item_5/text = "Ultra"
popup/item_5/id = 5

[connection signal="item_selected" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FullscreenOptionButton" to="." method="_on_fullscreen_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/MonitorOptionButton" to="." method="_on_monitor_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/VSyncOptionButton" to="." method="_on_v_sync_option_button_item_selected"]
[connection signal="drag_ended" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/ScaleContainer/ScaleSlider" to="." method="_on_scale_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/ScaleContainer/ScaleSlider" to="." method="_on_scale_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/UpscaleOptionButton" to="." method="_on_upscale_option_button_item_selected"]
[connection signal="drag_ended" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/SharpnessContainer/SharpnessSlider" to="." method="_on_sharpness_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/SharpnessContainer/SharpnessSlider" to="." method="_on_sharpness_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/SharpnessContainer/SharpnessSpinBox" to="." method="_on_sharpness_spin_box_value_changed"]
[connection signal="drag_ended" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer/FPSSlider" to="." method="_on_fps_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer/FPSSlider" to="." method="_on_fps_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/FPSContainer/FPSSpinBox" to="." method="_on_fps_spin_box_value_changed"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Display/MarginContainer/DisplayGridContainer/StatsOptionButton" to="." method="_on_stats_option_box_item_selected"]
[connection signal="pressed" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer/Preset1" to="." method="_on_preset_1_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer/Preset2" to="." method="_on_preset_2_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer/Preset3" to="." method="_on_preset_3_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer/Preset4" to="." method="_on_preset_4_pressed"]
[connection signal="pressed" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/PresetsContainer/Preset5" to="." method="_on_preset_5_pressed"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer/FilteringOptionButton" to="." method="_on_filtering_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer/AAOptionButton" to="." method="_on_aa_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer/LODOptionButton" to="." method="_on_lod_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer/ShadowSizeOptionButton" to="." method="_on_shadow_size_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Quality/MarginContainer/VBoxContainer/GridContainer/SSAOOptionButton" to="." method="_on_ssao_option_button_item_selected"]
